add metadata page and analytics

--- a/frontend/src/UI/Select.module.css
+++ b/frontend/src/UI/Select.module.css
@@ -52,4 +52,12 @@
   color: white;
   cursor: pointer;
   font-size: 16px;
+  overflow: hidden; /* Ensures that the overflow is hidden */
+  text-overflow: ellipsis;
+}
+
+.one-selected-value {
+  display: block;
+  overflow: hidden; /* Ensures that the overflow is hidden */
+  text-overflow: ellipsis;
 }
